<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spritfuchs</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity_menu">MainActivityMenu</string>
    <string name="title_activity_startpage">StartpageActivity</string>
    <string name="x_position_text">x-Position</string>
    <string name="y_position_text">y-Position</string>
    <string name="button_vergleich">Vergleich</string>
    <string name="umkreis_text">Umkreis</string>
    <string name="button_config">Konfig</string>
    <string name="button_info">Info</string>
    <string name="defaul_wert">-----</string>
    <string name="standort_text">Standort</string>
    <string name="diesel_max_text"> Diesel max.:</string>
    <string name="diesel_min_text">Diesel min.:</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_pref">PrefActivity</string>
    <string name="title_activity_vergleich">VergleichActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_conf">ConfActivity</string>
    <string name="title_activity_vergleich_liste">VergleichListeActivity</string>
    <string name="title_activity_vergleich_map">VergleichMapActivity</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="title_activity_vergleich_activity_list_detail">VergleichActivityListDetail</string>

</resources>
