<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:layout_marginTop="50dp"
    
    android:background="#f7f7f7"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewXPositionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_position_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewXPositionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaul_wert"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewYPositionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_position_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewYPositionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaul_wert"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/textViewStandortStadtText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standort_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewStandortStadtValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaul_wert"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewUmkreisText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/umkreis_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewUmkreisValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaul_wert"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/textViewDefaultSpritMaxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diesel_max_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewDefaultSpritMaxValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaul_wert"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewDefaultSpritMinText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diesel_min_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewDefaultSpritMinValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaul_wert"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" >

        <Button
            android:id="@+id/buttonVergleich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_vergleich" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_config" />

        <Button
            android:id="@+id/buttonInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_info" />

    </LinearLayout>

</LinearLayout>